--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,65 @@
 version: '2.2'
 services:
-    hello-nginx:
+    hello-frontend:
         build:
-            context: hello-nginx/
+            context: hello-frontend/
         ports:
             - 8888:80
-        container_name: hello-nginx
+        container_name: hello-frontend
     hello-springboot:
         build:
             context: hello-springboot/
         ports:
             - 8889:8080
         container_name: hello-springboot
+    alfresco:
+        image: alfresco/alfresco-content-repository-community:6.0.7-ga
+        environment:
+            JAVA_OPTS : "
+                -Ddb.driver=org.postgresql.Driver
+                -Ddb.username=alfresco
+                -Ddb.password=alfresco
+                -Ddb.url=jdbc:postgresql://postgres:5432/alfresco
+                -Dsolr.host=solr6
+                -Dsolr.port=8983
+                -Dsolr.secureComms=none
+                -Dsolr.base.url=/solr
+                -Dindex.subsystem.name=solr6
+                -Dshare.host=localhost
+                -Ddeployment.method=DOCKER_COMPOSE
+                -Dcsrf.filter.enabled=false
+                "
+        ports:
+            - 8082:8080 #Browser port
+
+    share:
+        image: alfresco/alfresco-share:6.0.b
+        environment:
+            - REPO_HOST=alfresco
+            - REPO_PORT=8080
+        ports:
+            - 8080:8080
+
+    postgres:
+        image: postgres:10.1
+        environment:
+            - POSTGRES_PASSWORD=alfresco
+            - POSTGRES_USER=alfresco
+            - POSTGRES_DB=alfresco
+        command: postgres -c max_connections=300 -c log_min_messages=LOG
+        ports:
+            - 5432:5432
+
+    solr6:
+        image: alfresco/alfresco-search-services:1.1.1
+        environment:
+            #Solr needs to know how to register itself with Alfresco
+            - SOLR_ALFRESCO_HOST=alfresco
+            - SOLR_ALFRESCO_PORT=8080
+            #Alfresco needs to know how to call solr
+            - SOLR_SOLR_HOST=solr6
+            - SOLR_SOLR_PORT=8983
+            #Create the default alfresco and archive cores
+            - SOLR_CREATE_ALFRESCO_DEFAULTS=alfresco,archive
+        ports:
+            - 8083:8983 #Browser port
